[gd_scene load_steps=5 format=3 uid="uid://cujl1apqm7nkg"]

[ext_resource type="Script" uid="uid://cflq1cf18t0cy" path="res://list_script.gd" id="1_jmjmp"]
[ext_resource type="Texture2D" uid="uid://co8es68fnj615" path="res://icon.svg" id="1_rxdrw"]
[ext_resource type="Theme" uid="uid://cs3o5746fd4tl" path="res://control_panel.tres" id="2_fao6l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lmgx4"]
bg_color = Color(0.5411765, 0.11372549, 0.15294118, 0)

[node name="NiceList" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 32.0
offset_right = -21.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_fao6l")
theme_override_styles/panel = SubResource("StyleBoxFlat_lmgx4")
script = ExtResource("1_jmjmp")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -206.0
offset_top = 16.0
offset_right = 206.0
offset_bottom = 71.0
grow_horizontal = 2
theme = ExtResource("2_fao6l")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
text = "Nice List"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Names" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -397.0
offset_right = 274.0
offset_bottom = 509.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_fao6l")
theme_override_constants/separation = 20

[node name="Name1" type="Label" parent="Names"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 32
text = "NAME MCNAMEFACE
NAUGHTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Symbol1" type="TextureRect" parent="Names"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_rxdrw")
stretch_mode = 3

[node name="Name2" type="Label" parent="Names"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 32
text = "NAME MCNAMEFACE
NAUGHTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Symbol2" type="TextureRect" parent="Names"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_rxdrw")
stretch_mode = 3

[node name="Name3" type="Label" parent="Names"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 32
text = "NAME MCNAMEFACE
NAUGHTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Symbol3" type="TextureRect" parent="Names"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_rxdrw")
stretch_mode = 3

[node name="Name4" type="Label" parent="Names"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 32
text = "NAME MCNAMEFACE
NAUGHTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Symbol4" type="TextureRect" parent="Names"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_rxdrw")
stretch_mode = 3

[node name="Name5" type="Label" parent="Names"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 32
text = "NAME MCNAMEFACE
NAUGHTY"
horizontal_alignment = 1
vertical_alignment = 1
